fixes outline for imageCards and overflowing title texts

--- a/src/style/gallery.scss
+++ b/src/style/gallery.scss
@@ -27,13 +27,18 @@
         grid-row: 1 /2;
     }
 
+    &:focus {
+        outline: 2px dashed $color--primary;
+        outline-offset: 4px;
+    }
+
     img {
         width: 100%;
         aspect-ratio: 1/1;
         object-fit: cover;
     }
     .titleContainer {
-        width: 100%;
+        width: 85%;
         display: inline-block;
 
         background-color: rgb(0, 0, 0, 0.8);
@@ -43,6 +48,10 @@
         font-size: 1.2em;
 
         padding: 1.2rem;
+
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
     }
 }
 
@@ -50,4 +59,8 @@
     position: absolute;
     width: 50%;
     margin: 0 auto;
+
+    .titleContainer {
+        width: 100%;
+    }
 }
