--- a/src/style/general.scss
+++ b/src/style/general.scss
@@ -9,7 +9,8 @@ img {
     max-width: 100%;
 }
 
-#loading {
+#loading,
+#errorMessage {
     text-align: center;
     font-size: 1.4rem;
     margin-top: 4rem;
