--- a/src/style/variables.scss
+++ b/src/style/variables.scss
@@ -1,6 +1,7 @@
 //Colors
 $color--white: rgb(228, 224, 224);
 $color--orange: rgb(201, 117, 21);
+$color--primary: #00d19f;
 $bg: rgb(39, 39, 39);
 
 //Spacing
